--- a/index.html
+++ b/index.html
@@ -1,2 +1,226 @@
-<h1>Sponsor a teen for 6 months of training, just for €90!</h1>
-call me maybe
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Sponsor 6 month training for a teen to get a better change to have a successful career</title>
+
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+    <!-- Bootstrap -->
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/gh-fork-ribbon.css">
+    <!--[if lt IE 9]>
+        <link rel="stylesheet" href="css/gh-fork-ribbon.ie.css">
+    <![endif]-->
+
+    <link href="css/main.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+  </head>
+  <body>
+    <!-- facebook like plugin -->
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&appId=292772274170801&version=v2.0";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+    <!-- end facebook plugin -->
+
+    <div id="skrollr-body" class="hidden-xs">
+        <div id="toy-path" class="container">
+            <div id="bonequinho"
+                data-370="transform:rotate(0deg);"
+                data-750="transform:rotate(360deg);"
+            ></div>
+            <div id="toy-icons">
+                <i class="fa fa-keyboard-o"
+                    data-850="opacity: 0; top: -100px;"
+                    data-980="opacity: 1; top: 50px;"
+                    data-1280="opacity: 0; "></i>
+                <i class="fa fa-codepen"
+                    data-850="opacity: 0; top: -50px;"
+                    data-1000="opacity: 1; "
+                    data-1280="opacity: 0; top: 100px;"></i>
+                <i class="fa fa-pencil-square-o"
+                    data-850="opacity: 0; top: -100px;"
+                    data-960="opacity: 1;"
+                    data-1280="opacity: 0; top: 200px;"></i>
+                <i class="fa fa-puzzle-piece"
+                    data-850="opacity: 0; top: -120px;"
+                    data-1100="opacity: 1;"
+                    data-1280="opacity: 0; top: 220px;"></i>
+                <i class="fa fa-gamepad"
+                    data-850="opacity: 0; top: -90px;"
+                    data-990="opacity: 1;"
+                    data-1280="opacity: 0; top: 40px;"></i>
+                <i class="fa fa-trophy"
+                    data-1290="opacity: 0;"
+                    data-1390="opacity: 1;"
+                    data-1580="opacity: 0;"></i>
+            </div>
+        </div>
+    </div>
+
+    <nav class="container">
+        <a href="http://escolamupi.com.br" target="_blank"><img class="logo pull-left" src="img/logo.png" alt="Mupi logo"></a>
+
+        <div class="fb-like pull-right" data-href="http://facebook.com/escolamupi" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
+
+    </nav>
+    <div id="header-banner">
+        <header class="container">
+            <div class="row">
+                <div class="col-sm-8 col-sm-offset-2 text-center">
+                    <h1>Sponsor a teen for 6 months of training,<br/><span>just for €90</span></h1>
+
+                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="G6DL5RXEDDXY8">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/pt_BR/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+
+                </div>
+            </div>
+        </header>
+    </div>
+    <div class="container">
+        <div class="row paths">
+            <div class="col-sm-3 col-sm-offset-1">
+                <img class="img-responsive" src="img/paths.png" alt="carreiras">
+            </div>
+            <section class="col-sm-8">
+                <h2 class
+                ="title text-center">The student choses a path</h2>
+                <p>
+                    Sometimes it is hard to know where to start. At Mupi the student choses a path to follow and
+                    we teach step-by-step what they need to start a successful career.
+                </p>
+            </section>
+        </div>
+    </div>
+    <div class="bg-lua">
+         <div class="container">
+            <div class="col-sm-5 col-sm-offset-1">
+                <h2 class="title">Learn anywhere</h2>
+                <p>We are 100% online, you can learn wherever and whenever you feel like it.</p>
+                <p>
+                    <a class="btn btn-success" target="_blank" href="http://escolamupi.com.br/">Learn more</a>
+                </p>
+            </div>
+            <div class="col-sm-6">
+                <img class="pull-right img-responsive" src="img/lua.png" alt="Mupi logo">
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-5 col-sm-offset-1">
+                <h2 class="title">Practical learning</h2>
+                <p>
+                    We teach through project building and problem solving, where the students learn exactly what
+                    the market demands.
+                </p>
+                <p>
+                    <img class="img-rounded img-responsive" src="img/terminal.gif" alt="Gif terminal">
+                </p>
+            </div>
+            <div class="col-sm-5">
+                <h2 class="title">Multidisciplinary skills</h2>
+                <p>
+                    We want our students to become high quality professionals!
+                    To achieve that we
+                    teach them logic, customer relationship, project manager and creativity.
+                </p>
+                <p class="text-center">
+                    <img class="img-rounded img-responsive" src="img/cubo.png" alt="Cubo mágico">
+                </p>
+            </div>
+        </div>
+        <div class="row awards">
+             <section class="col-sm-8 col-sm-offset-2 text-center">
+                <h2 class="title">Giving a better chance to have a successful career</h2>
+                <p>
+                    We want to be the first step of having a successful career to millions of
+                    Brazilian teenagers who dream of having a job in IT area.
+                </p>
+            </section>
+        </div>
+        <div class="row">
+            <section class="col-sm-6 col-sm-offset-1">
+                <h2 class="title">Portfolio as CV</h2>
+                <p>
+                    Our students build a portfolio while they learn that can be used as a curriculum
+                    and help them find a job even without having previous experience.
+                </p>
+            </section>
+            <section class="col-sm-5">
+                <p class="pull-right">
+                    <img class="img-rounded img-responsive" src="img/portfolio.png" alt="Portfolio">
+                </p>
+            </section>
+        </div>
+        <div class="row success-banner">
+            <!-- <i class="fa fa-globe"
+                data-1600="opacity: 0;"
+                data-1690="opacity: 1;"
+                ></i> -->
+            <h2 class="title text-center">Help us share our knowledge with who needs it!</h2>
+        </div>
+        <div class="row text-center enroll">
+            <a class="btn btn-success" target="_blank"
+                href="http://escolamupi.com.br/">Learn more
+                <i class="fa fa-arrow-right"></i>
+            </a>
+        </div>
+    </div>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <ul class="text-center col-lg-12 nav-social-icons">
+                  <li>
+                    <a class="fb" href="http://www.facebook.com/escolamupi" target="_blank" title="facebook">
+                        <i class="fa fa-facebook"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="ln" href="http://www.linkedin.com/company/mupi" target="_blank" title="linkedin">
+                        <i class="fa fa-linkedin"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="tw" href="https://twitter.com/escolamupi" target="_blank" title="twitter">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script id="mainjs" src="js/main.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-52340833-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+  </body>
+</html>
