Improve the text

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
             </div>
             <section class="col-sm-8">
                 <h2 class
-                ="title text-center">The student choses a path</h2>
+                ="title text-center">The student chooses a path</h2>
                 <p>
-                    Sometimes it is hard to know where to start. At Mupi the student choses a path to follow and
+                    Sometimes it is hard to know from where to start. At Mupi the student chooses a path to follow and
                     we teach step-by-step what they need to start a successful career.
                 </p>
             </section>
@@ -114,7 +114,7 @@
     <div class="bg-lua">
          <div class="container">
             <div class="col-sm-5 col-sm-offset-1">
-                <h2 class="title">Learn anywhere</h2>
+                <h2 class="title">Learn everywhere</h2>
                 <p>We are 100% online, you can learn wherever and whenever you feel like it.</p>
                 <p>
                     <a class="btn btn-success" target="_blank" href="http://escolamupi.com.br/">Learn more</a>
@@ -130,8 +130,7 @@
             <div class="col-sm-5 col-sm-offset-1">
                 <h2 class="title">Practical learning</h2>
                 <p>
-                    We teach through project building and problem solving, where the students learn exactly what
-                    the market demands.
+                    Our learning process is through project building and problem solving, in which the students learn exactly what the market demands.
                 </p>
                 <p>
                     <img class="img-rounded img-responsive" src="img/terminal.gif" alt="Gif terminal">
@@ -141,8 +140,8 @@
                 <h2 class="title">Multidisciplinary skills</h2>
                 <p>
                     We want our students to become high quality professionals!
-                    To achieve that we
-                    teach them logic, customer relationship, project manager and creativity.
+                    In order to achieve tha,t we teach them logic, customer relationship,
+                    project manager and creativity.
                 </p>
                 <p class="text-center">
                     <img class="img-rounded img-responsive" src="img/cubo.png" alt="Cubo mágico">
@@ -162,8 +161,8 @@
             <section class="col-sm-6 col-sm-offset-1">
                 <h2 class="title">Portfolio as CV</h2>
                 <p>
-                    Our students build a portfolio while they learn that can be used as a curriculum
-                    and help them find a job even without having previous experience.
+                    Our students build a portfolio while they learn.
+                    It can be used as a curriculum and help them find a job even without having previous experience.
                 </p>
             </section>
             <section class="col-sm-5">
