--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sponsor 6 month training for a teen to get a better change to have a successful career</title>
 
+    <link rel="shortcut icon" type="image/png" href="favicon.ico" />
+
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <!-- Bootstrap -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -150,7 +152,7 @@
         </div>
         <div class="row awards">
              <section class="col-sm-8 col-sm-offset-2 text-center">
-                <h2 class="title">Giving a better chance to have a successful career</h2>
+                <h2 class="title">Giving a better chance of having a successful career</h2>
                 <p>
                     We want to be the first step of having a successful career to millions of
                     Brazilian teenagers who dream of having a job in IT area.
